--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>About</h2>
             
             <div class="image-container">
-                <img src="profile-image.jpg" alt="Russell Abraham">
+                <img src="profile-image.png" alt="Russell Abraham">
             </div>
 
             <div class="details">
